# orka

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPETITION.md  CORE-CONCEPTS.md  DEMO-SCRIPT.md  OFFICE-HOURS-2026-04-17.md  ORKA-PLAN.md  PAINS.md  PROVIDER-ADAPTER-SKETCH.md  SKILL-FORMAT.md  STRATEGY.md  TESTING-PLAN.md  perf-baselines.json
e2e/fixtures/: compacted-session.jsonl  happy-session.jsonl  recap-session.jsonl
e2e/specs/: app-boots.spec.ts  awaiting-after-compact.spec.ts  meeting-flow.spec.ts  pin-persists.spec.ts  recap-brief.spec.ts  (+2 more)
scripts/: capture-demo.mjs  demo-page-v1-backup.html  demo-page.html  demo-short-hook.html  logo-preview.html  perf-check.mjs  record-demo-native.sh  record-demo.mjs  render-icon.mjs
src/: App.css  App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  claude_gate.rs  dest_profiles.rs  destinations.rs  graph.rs  hire_chat.rs  kb.rs  lib.rs  main.rs  model_config.rs  node_runner.rs  onboarding.rs  perf_harness.rs  perf_smoke.rs  pipeline_gen.rs  pipeline_gen_prompt.md  pty.rs  run_artifacts.rs  run_chat.rs  run_log.rs  schedules.rs  seed_skills.rs  session_brief.rs  session_synthesis.rs  sessions.rs  skill_evolution.rs  skill_import.rs  skill_trust.rs  skill_workdir.rs  skills.rs  suggest_examples.rs  terminal_launcher.rs  trusted_taps.rs  workspace.rs
src-tauri/src/skill_md/: mod.rs  parse.rs  write.rs
(+94 files in other folders)
