[package]
name = "orka"
version = "0.1.0"
description = "Canvas-based orchestrator for the Claude CLI — build, schedule, and observe skill runs"
authors = ["Orka contributors"]
edition = "2021"
default-run = "orka"
license = "MIT"
repository = "https://github.com/jasonjzhu/orka"

[lib]
name = "orka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orka-cli"
path = "src/bin/orka.rs"

[[bin]]
name = "orka-perf"
path = "src/bin/perf_bench.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "fs", "sync", "rt", "macros", "time"] }
dirs = "5"
libc = "0.2"
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
comrak = { version = "0.29", default-features = false }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
fs2 = "0.4"
# Embedded terminal — cross-platform PTY (Wezterm team's library).
# Powers src-tauri/src/pty.rs which the EmbeddedTerminal React component
# attaches to via xterm.js. On Windows this internally uses ConPTY.
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
